--- a/src/components/landing/Introduccion.astro
+++ b/src/components/landing/Introduccion.astro
@@ -36,7 +36,7 @@ import sistemaImage from "@assets/images/proyectos-de-impermeabilizantes-mapei-e
       <p class="text-gray-700 text-lg leading-relaxed" data-aos="zoom-in-up">
         Mapei trae a México <strong>más de 80 años de liderazgo global</strong> en materiales
         para la construcción. Con <strong>producción local</strong> y un profundo entendimiento
-        de la <strong>diversidad climática del país</strong>, ofrecemos soluciones de
+        de la <strong>diversidad climática del país</strong>, ofrece soluciones de
         <strong>impermeabilización de alta tecnología</strong> diseñadas para garantizar la
         <strong>máxima durabilidad y protección</strong> para cada proyecto.
       </p>
