--- a/src/components/landing/Liquidos.astro
+++ b/src/components/landing/Liquidos.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import impermeabilizantesImage from "@assets/images/impermeabilizacion-techo-mapei-mexico.webp";
 ---
 
-<section class="py-12" id="productos">
+<section class="py-12" id="impermeabilizantes">
   <div class="mx-4">
     <div
       class="max-w-6xl px-4 sm:px-6 lg:px-8 flex flex-col lg:flex-row gap-[5px] items-center py-4 lg:py-12 bg-white rounded-md mx-auto shadow-lg hover:shadow-xl transition-shadow duration-300"
