Update landing page sections and metadata
Added a heading above the contact form in Hero.astro, changed the section ID in Membranas.astro, and updated index.astro with new metadata, improved formatting, and set noindex to true. These changes enhance clarity, SEO control, and maintain consistency across the landing page.

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -43,7 +43,7 @@ import heroImage from "@assets/images/impermeabilizantes-mapei-en-mexico.webp";
       <!-- Lista de Teléfonos -->
       <WhatsAppList />
       <PhoneList />
-
+      <h3 class="text-accent text-xl my-2 font-bold">Envía un mensaje</h3>
       <!-- Formulario de Contacto -->
       <ContactForm />
     </div>
