--- a/src/components/landing/Instalacion.astro
+++ b/src/components/landing/Instalacion.astro
@@ -13,7 +13,7 @@ import sistemaImage2 from "@assets/images/aplicacion-de-impermeabilizantes-mapei
     <div class="w-full md:w-1/2">
       <Image
         src={sistemaImage2}
-        alt="Impermeabilizantes Mapei para techos"
+        alt="Instalación de Impermeabilizantes Mapei para techos"
         class="rounded-lg w-full h-auto shadow-lg hover:shadow-xl transition-shadow duration-300"
         width={743}
         height={557}
@@ -23,23 +23,34 @@ import sistemaImage2 from "@assets/images/aplicacion-de-impermeabilizantes-mapei
     </div>
 
     <!-- Bloque de descripción -->
-    <div class="w-full md:w-1/2 bg-white rounded-md p-6 shadow-lg hover:shadow-xl transition-shadow duration-300">
+    <div
+      class="w-full md:w-1/2 bg-white rounded-md p-6 shadow-lg hover:shadow-xl transition-shadow duration-300"
+    >
       <h2
         class="text-primary text-3xl font-bold mb-2 leading-snug"
         data-aos="zoom-in-up"
       >
         <strong class="text-accent"
-          >Tu Sistema MAPEI Instalado por Expertos:</strong
-        > 40 Años de Experiencia y Garantía por Escrito
+          >La Mejor Tecnología Merece la Mejor Instalación</strong
+        >
       </h2>
+      <h3
+        class="text-primary text-2xl font-normal mb-2 leading-snug"
+        data-aos="zoom-in-up"
+      >
+        40 Años de Experiencia y Garantía de Aplicación por Escrito
+      </h3>
       <div class="w-[140px] h-[2px] bg-accent mb-6"></div>
       <p class="text-gray-700 text-lg leading-relaxed" data-aos="zoom-in-up">
-        <strong>Un producto superior merece una instalación superior.</strong> Nuestro
-        equipo certificado tiene más de 40 años aplicando sistemas de impermeabilización
-        con maestría. Aseguramos que tu sistema MAPEI se instale a la perfección para
-        un rendimiento máximo. <strong
-          >Confía en los expertos y protege tu proyecto</strong
-        > con nuestra garantía de aplicación por escrito.
+        Un sistema <strong>impermeabilizante Mapei</strong> de clase mundial requiere
+        una aplicación experta para alcanzar su máximo potencial. Nuestro equipo
+        de técnicos certificados cuenta con más de cuatro décadas de experiencia
+        aplicando sistemas de alta tecnología con precisión.
+      </p>
+      <p class="text-gray-700 text-lg leading-relaxed my-3" data-aos="zoom-in-up">
+        Obten una instalación que maximiza la adherencia, la
+        elasticidad y la vida útil del producto. <strong>Confía en los expertos y
+        protege tu proyecto con nuestra garantía por escrito.</strong>
       </p>
     </div>
   </div>
