--- a/src/components/landing/Nosotros.astro
+++ b/src/components/landing/Nosotros.astro
@@ -15,17 +15,25 @@ import empresaImage from "@assets/images/corporativo-construyendo-soluciones---.
         class="text-primary text-2xl md:text-3xl font-bold mb-2 leading-snug"
         data-aos="zoom-in-up"
       >
-        <strong class="text-accent">Tu Aliado Experto</strong> en Impermeabilización
+        <strong class="text-accent">Tu Aliado Experto</strong> en Sistemas de Impermeabilización
       </h2>
       <div class="w-[140px] h-[2px] bg-accent mb-6"></div>
       <p class="text-gray-700 text-lg leading-relaxed" data-aos="zoom-in-up">
         Somos <strong>CORPORATIVO CONSTRUYENDO SOLUCIONES</strong>,
-        distribuidores líderes de
-        <strong>impermeabilizantes Mapei en México</strong>. Con más de 40 años
-        de experiencia en la protección de estructuras, combinamos nuestro
-        liderazgo en el mercado con la tecnología innovadora de Mapei para
-        garantizar la máxima durabilidad y eficiencia en tus proyectos. Nuestro
-        compromiso es proteger tu inversión con soluciones que perduran.
+        distribuidores e instaladores certificados líderes de <strong
+          >impermeabilizantes Mapei en México</strong
+        >.
+      </p>
+      <p
+        class="text-gray-700 text-lg leading-relaxed my-3"
+        data-aos="zoom-in-up"
+      >
+        Con <strong>más de 40 años de experiencia</strong>, no solo vendemos productos,
+        entregamos soluciones completas. Combinamos la innovación global de
+        Mapei con nuestro profundo conocimiento del mercado local para proteger
+        tu inversión con sistemas que realmente perduran. </br><strong
+          >Nuestro compromiso es tu tranquilidad.</strong
+        >
       </p>
     </div>
 
@@ -37,7 +45,8 @@ import empresaImage from "@assets/images/corporativo-construyendo-soluciones---.
         class="rounded-lg w-full h-auto"
         width={empresaImage.width}
         height={empresaImage.height}
-        sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px",
+        sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px"
+        ,
         densities={[1, 1.5, 2]}
         loading="lazy"
         data-aos="zoom-in-up"
