--- a/src/components/landing/Proyectos.astro
+++ b/src/components/landing/Proyectos.astro
@@ -11,12 +11,14 @@ import casoImage2 from "@assets/images/centro-cultural-manuel-gomez-morin-.webp"
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-3xl mx-auto text-center" data-aos="zoom-in-up">
       <h2 class="text-primary text-center text-3xl font-bold mb-2 leading-snug">
-        <strong class="text-accent">Proyectos de Éxito</strong> con Tecnología Mapei
+        <strong class="text-accent">Casos de Éxito:</strong> Impermeabilizantes Mapei
+        en Acción
       </h2>
       <div class="w-[140px] h-[2px] bg-accent mx-auto mb-8"></div>
       <p class="text-center text-gray-700 text-xl mb-12">
-        Descubre cómo las soluciones Mapei han resuelto los desafíos de
-        impermeabilización en proyectos emblemáticos.
+        Descubre cómo la tecnología Mapei ha protegido algunas de las obras más
+        emblemáticas de México, demostrando su rendimiento en los desafíos más
+        exigentes.
       </p>
     </div>
   </div>
@@ -69,7 +71,8 @@ import casoImage2 from "@assets/images/centro-cultural-manuel-gomez-morin-.webp"
         class="rounded-lg w-full h-auto"
         width={casoImage2.width}
         height={casoImage2.height}
-        sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px",
+        sizes="(max-width: 768px) 100vw, (max-width: 1024px) 907px, 714px"
+        ,
         densities={[1, 1.5, 2]}
         loading="lazy"
         data-aos="zoom-in-up"
