--- a/src/components/landing/Beneficios.astro
+++ b/src/components/landing/Beneficios.astro
@@ -36,7 +36,7 @@ const beneficios = [
 ];
 ---
 
-<section class="py-12" id="beneficios">
+<section class="py-12 fondo-obscuro" id="beneficios">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-[35px]">
       {beneficios.map((beneficio) => (
