--- a/src/components/landing/Instalacion.astro
+++ b/src/components/landing/Instalacion.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import sistemaImage2 from "@assets/images/aplicacion-de-impermeabilizantes-mapei-en-mexico-.webp";
 ---
 
-<section class="py-12" id="instalacion">
+<section class="py-12 fondo-claro" id="instalacion">
   <div
     class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row gap-[35px] items-center md:py-12"
   >
@@ -48,7 +48,7 @@ import sistemaImage2 from "@assets/images/aplicacion-de-impermeabilizantes-mapei
         aplicando sistemas de alta tecnología con precisión.
       </p>
       <p class="text-gray-700 text-lg leading-relaxed my-3" data-aos="zoom-in-up">
-        Obten una instalación que maximiza la adherencia, la
+        Obtén una instalación que maximiza la adherencia, la
         elasticidad y la vida útil del producto. <strong>Confía en los expertos y
         protege tu proyecto con nuestra garantía por escrito.</strong>
       </p>
