--- a/src/components/landing/Nosotros.astro
+++ b/src/components/landing/Nosotros.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import empresaImage from "@assets/images/corporativo-construyendo-soluciones---.webp";
 ---
 
-<section class="py-12" id="nosotros">
+<section class="py-12 fondo-obscuro" id="nosotros">
   <div
     class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row gap-[35px] items-center"
   >
