--- a/src/components/landing/Proyectos.astro
+++ b/src/components/landing/Proyectos.astro
@@ -7,7 +7,7 @@ import casoImage from "@assets/images/proyectos-de-impermeabilizantes-mapei-en-m
 import casoImage2 from "@assets/images/centro-cultural-manuel-gomez-morin-.webp";
 ---
 
-<section class="py-12 px-4" id="proyectos">
+<section class="py-12 px-4 fondo-claro" id="proyectos">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-3xl mx-auto text-center" data-aos="zoom-in-up">
       <h2 class="text-primary text-center text-3xl font-bold mb-2 leading-snug">
