--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import MantosAsfalticos from "@components/landing/MantosAsfalticos.astro";
     <Beneficios />
   </div>
 
-  <div class="bg-gradient-to-r from-[#EBF4F5] to-[#B5C6E0]">
+  <div>
     <Instalacion />
   </div>
 
